--- a/src/main/resources/templates/task/index.html
+++ b/src/main/resources/templates/task/index.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Список задач</title>
+  <meta charset="UTF-8">
+  <title>Задачи</title>
 </head>
 <body>
-<h1>Список задач проекта: [[${project.title}]]</h1>
-<table>
+<h1>Задачи проекта: <span th:text="${project.title}"></span></h1>
+<table border="1">
   <thead>
   <tr>
-    <th>ID</th>
     <th>Название</th>
     <th>Автор</th>
     <th>Исполнитель</th>
     <th>Статус</th>
+    <th>Релизы</th>
   </tr>
   </thead>
   <tbody>
   <tr th:each="task : ${tasks}">
-    <td th:text="${task.id}"></td>
     <td th:text="${task.name}"></td>
     <td th:text="${task.author}"></td>
     <td th:text="${task.performer}"></td>
     <td th:text="${task.status}"></td>
+    <td>
+      <ul>
+        <li th:each="release : ${task.releases}"
+            th:text="${release.version} + ' ' + ${release.startDate} + ' - ' +
+            (${release.endDate} == null ? 'Неизвестно' : ${release.endDate})"></li>
+      </ul>
+    </td>
   </tr>
   </tbody>
 </table>
