--- a/src/main/resources/templates/project/create.html
+++ b/src/main/resources/templates/project/create.html
@@ -3,15 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Создание проекта</title>
+  <!-- Подключаем стили Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-<h1>Создать новый проект</h1>
-<form method="post" th:action="@{/projects/create}" th:object="${project}">
-  <div>
-    <label for="title">Название:</label>
-    <input type="text" id="title" th:field="*{title}" required/>
-  </div>
-  <button type="submit">Создать проект</button>
-</form>
+<div class="container mt-5">
+  <h1 class="mb-4">Создать новый проект</h1>
+  <form method="post" th:action="@{/projects/create}" th:object="${project}">
+    <div class="mb-3">
+      <label for="title" class="form-label">Название:</label>
+      <input type="text" id="title" th:field="*{title}" class="form-control" required/>
+    </div>
+    <button type="submit" class="btn btn-primary">Создать проект</button>
+  </form>
+</div>
+<!-- Подключаем скрипты Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
