--- a/src/main/resources/templates/project/edit.html
+++ b/src/main/resources/templates/project/edit.html
@@ -3,18 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <title>Изменение проекта</title>
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+        crossorigin="anonymous">
 </head>
 <body>
-<h1>Изменить проект</h1>
-<form method="POST" th:object="${project}" th:action="@{/projects/{id}/edit(id=${project.id})}">
-  <input type="hidden" th:field="*{id}">
-  <label for="title">Название:</label>
-  <input type="text" th:field="*{title}" id="title" required>
-  <br>
-  <label for="isOpen">Статус:</label>
-  <input type="checkbox" th:field="*{isOpen}" id="isOpen">
-  <br>
-  <button type="submit">Сохранить</button>
-</form>
+<div class="container">
+  <h1>Изменить проект</h1>
+  <form method="POST" th:object="${project}" th:action="@{/projects/{id}/edit(id=${project.id})}">
+    <input type="hidden" th:field="*{id}">
+    <div class="mb-3">
+      <label for="title" class="form-label">Название:</label>
+      <input type="text" th:field="*{title}" id="title" class="form-control" required>
+    </div>
+    <div class="mb-3">
+      <div class="form-check">
+        <input type="checkbox" th:field="*{isOpen}" class="form-check-input" id="isOpen">
+        <label class="form-check-label" for="isOpen">Открыт</label>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Сохранить</button>
+  </form>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 </html>
