--- a/src/main/resources/templates/project/index.html
+++ b/src/main/resources/templates/project/index.html
@@ -2,31 +2,41 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Projects</title>
+  <title>Проекты</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+        crossorigin="anonymous">
 </head>
 <body>
-<h1>Projects</h1>
-<a href="/projects/create" class="btn btn-primary">Создать проект</a>
-<table>
-  <thead>
-  <tr>
-    <th>Название проекта</th>
-    <th>Статус проекта</th>
-    <th>Действия</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:each="project : ${project}">
-    <td th:text="${project.title}"></td>
-    <td th:text="${project.isOpen ? 'Открыт' : 'Закрыт'}"></td>
-    <td>
-      <a th:href="@{/projects/{id}(id=${project.id})}">Просмотреть</a>
-      <a th:href="@{/projects/{id}/edit(id=${project.id})}">Редактировать</a>
-      <a th:href="@{/projects/{id}/delete(id=${project.id})}"
-         onclick="return confirm('Вы действительно хотите удалить этот проект?')">Удалить</a>
-    </td>
-  </tr>
-  </tbody>
-</table>
+<div class="container">
+  <h1>Проекты</h1>
+  <a href="/projects/create" class="btn btn-primary mb-3">Создать проект</a>
+  <table class="table">
+    <thead>
+    <tr>
+      <th>Название проекта</th>
+      <th>Статус проекта</th>
+      <th>Действия</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="project : ${project}">
+      <td th:text="${project.title}"></td>
+      <td th:text="${project.isOpen ? 'Открыт' : 'Закрыт'}"></td>
+      <td>
+        <a th:href="@{/projects/{id}(id=${project.id})}" class="btn btn-sm btn-primary mr-2">Просмотреть</a>
+        <a th:href="@{/projects/{id}/edit(id=${project.id})}" class="btn btn-sm btn-warning mr-2">Редактировать</a>
+        <a th:href="@{/projects/{id}/delete(id=${project.id})}"
+           onclick="return confirm('Вы действительно хотите удалить этот проект?')"
+           class="btn btn-sm btn-danger">Удалить</a>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 </html>
