--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -3,34 +3,43 @@
 <head>
   <meta charset="UTF-8"/>
   <title>Создание задачи</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+        crossorigin="anonymous">
 </head>
 <body>
-<h2>Создание задачи</h2>
-<form action="#" th:action="@{/projects/{id}/create(id=${project.id})}" th:object="${task}"
-      method="post">
-  <input type="hidden" th:field="*{id}"/>
-  <input type="hidden" th:field="*{project}"/>
-  <p>
-    <label for="name">Название:</label>
-    <input type="text" id="name" th:field="*{name}" required="required"/>
-  </p>
-  <p>
-    <label for="author">Автор:</label>
-    <input type="text" id="author" th:field="*{author}" required="required"/>
-  </p>
-  <p>
-    <label for="performer">Исполнитель:</label>
-    <input type="text" id="performer" th:field="*{performer}"/>
-  </p>
-  <p>
-    <label for="status">Статус:</label>
-    <select id="status" th:field="*{status}" required="required">
-      <option value="BACKLOG">BACKLOG</option>
-      <option value="IN_PROGRESS">IN_PROGRESS</option>
-      <option value="DONE">DONE</option>
-    </select>
-  </p>
-  <button type="submit">Создать</button>
-</form>
+<div class="container">
+  <h2>Создание задачи</h2>
+  <form action="#" th:action="@{/projects/{id}/create(id=${project.id})}" th:object="${task}"
+        method="post">
+    <input type="hidden" th:field="*{id}"/>
+    <input type="hidden" th:field="*{project}"/>
+    <div class="mb-3">
+      <label for="name" class="form-label">Название:</label>
+      <input type="text" class="form-control" id="name" th:field="*{name}" required="required"/>
+    </div>
+    <div class="mb-3">
+      <label for="author" class="form-label">Автор:</label>
+      <input type="text" class="form-control" id="author" th:field="*{author}" required="required"/>
+    </div>
+    <div class="mb-3">
+      <label for="performer" class="form-label">Исполнитель:</label>
+      <input type="text" class="form-control" id="performer" th:field="*{performer}"/>
+    </div>
+    <div class="mb-3">
+      <label for="status" class="form-label">Статус:</label>
+      <select id="status" class="form-select" th:field="*{status}" required="required">
+        <option value="BACKLOG">BACKLOG</option>
+        <option value="IN_PROGRESS">IN_PROGRESS</option>
+        <option value="DONE">DONE</option>
+      </select>
+    </div>
+    <button type="submit" class="btn btn-primary">Создать</button>
+  </form>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 </html>
