--- a/src/main/resources/templates/task/index.html
+++ b/src/main/resources/templates/task/index.html
@@ -3,36 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <title>Задачи</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+        crossorigin="anonymous">
 </head>
 <body>
-<h1>Задачи проекта: <span th:text="${project.title}"></span></h1>
-<a th:href="@{/projects/{id}/create(id=${project.id})}">Создать задачу</a>
-<table border="1">
-  <thead>
-  <tr>
-    <th>Название</th>
-    <th>Автор</th>
-    <th>Исполнитель</th>
-    <th>Статус</th>
-    <th>Релизы</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:each="task : ${tasks}">
-    <td th:text="${task.name}"></td>
-    <td th:text="${task.author}"></td>
-    <td th:text="${task.performer}"></td>
-    <td th:text="${task.status}"></td>
-    <td>
-      <ul>
-        <li th:each="release : ${task.releases}"
-            th:text="${release.version} + ' ' + ${release.startDate} + ' - ' +
-            (${release.endDate} == null ? 'Неизвестно' : ${release.endDate})"></li>
-      </ul>
-    </td>
-  </tr>
-  </tbody>
-</table>
-<a href="/projects">Назад к проектам</a>
+<div class="container my-5">
+  <h1 class="mb-4">Задачи проекта: <span th:text="${project.title}"></span></h1>
+  <a class="btn btn-primary mb-4" th:href="@{/projects/{id}/create(id=${project.id})}">Создать
+    задачу</a>
+  <table class="table table-striped">
+    <thead>
+    <tr>
+      <th>Название</th>
+      <th>Автор</th>
+      <th>Исполнитель</th>
+      <th>Статус</th>
+      <th>Релизы</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="task : ${tasks}">
+      <td th:text="${task.name}"></td>
+      <td th:text="${task.author}"></td>
+      <td th:text="${task.performer}"></td>
+      <td th:text="${task.status}"></td>
+      <td>
+        <ul>
+          <li th:each="release : ${task.releases}"
+              th:text="${release.version} + ' ' + ${release.startDate} + ' - ' +
+              (${release.endDate} == null ? 'Неизвестно' : ${release.endDate})"></li>
+        </ul>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+  <a class="btn btn-secondary" href="/projects">Назад к проектам</a>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 </html>
