--- a/src/main/resources/templates/project/index.html
+++ b/src/main/resources/templates/project/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container">
   <h1>Проекты</h1>
-  <a href="/projects/create" class="btn btn-primary mb-3">Создать проект</a>
+  <a href="/create" class="btn btn-primary mb-3">Создать проект</a>
   <table class="table">
     <thead>
     <tr>
@@ -25,9 +25,9 @@
       <td th:text="${project.title}"></td>
       <td th:text="${project.isOpen ? 'Открыт' : 'Закрыт'}"></td>
       <td>
-        <a th:href="@{/projects/{id}(id=${project.id})}" class="btn btn-sm btn-primary mr-2">Просмотреть</a>
-        <a th:href="@{/projects/{id}/edit(id=${project.id})}" class="btn btn-sm btn-warning mr-2">Редактировать</a>
-        <a th:href="@{/projects/{id}/delete(id=${project.id})}"
+        <a th:href="@{/{id}(id=${project.id})}" class="btn btn-sm btn-primary mr-2">Просмотреть</a>
+        <a th:href="@{/{id}/edit(id=${project.id})}" class="btn btn-sm btn-warning mr-2">Редактировать</a>
+        <a th:href="@{/{id}/delete(id=${project.id})}"
            onclick="return confirm('Вы действительно хотите удалить этот проект?')"
            class="btn btn-sm btn-danger">Удалить</a>
       </td>
