--- a/src/main/resources/templates/task/index.html
+++ b/src/main/resources/templates/task/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container my-5">
   <h1 class="mb-4">Задачи проекта: <span th:text="${project.title}"></span></h1>
-  <a class="btn btn-primary mb-4" th:href="@{/projects/{id}/create(id=${project.id})}">Создать
+  <a class="btn btn-primary mb-4" th:href="@{/{id}/create(id=${project.id})}">Создать
     задачу</a>
   <table class="table table-striped">
     <thead>
@@ -39,7 +39,7 @@
     </tr>
     </tbody>
   </table>
-  <a class="btn btn-secondary" href="/projects">Назад к проектам</a>
+  <a class="btn btn-secondary" href="/">Назад к проектам</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
