--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -1,41 +1,53 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Создание задачи</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
         crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
-  <h2>Создание задачи</h2>
-  <form action="#" th:action="@{/{id}/create(id=${project.id})}" th:object="${task}"
-        method="post">
-    <input type="hidden" th:field="*{id}"/>
-    <input type="hidden" th:field="*{project}"/>
+  <h1 class="mb-4">Создание задачи</h1>
+  <form method="POST">
     <div class="mb-3">
       <label for="name" class="form-label">Название:</label>
-      <input type="text" class="form-control" id="name" th:field="*{name}" required="required"/>
+      <input type="text" id="name" name="name" class="form-control" required>
     </div>
     <div class="mb-3">
       <label for="author" class="form-label">Автор:</label>
-      <input type="text" class="form-control" id="author" th:field="*{author}" required="required"/>
+      <input type="text" id="author" name="author" class="form-control" required>
     </div>
     <div class="mb-3">
       <label for="performer" class="form-label">Исполнитель:</label>
-      <input type="text" class="form-control" id="performer" th:field="*{performer}"/>
+      <input type="text" id="performer" name="performer" class="form-control" required>
     </div>
     <div class="mb-3">
       <label for="status" class="form-label">Статус:</label>
-      <select id="status" class="form-select" th:field="*{status}" required="required">
+      <select id="status" name="status" class="form-select">
         <option value="BACKLOG">BACKLOG</option>
         <option value="IN_PROGRESS">IN_PROGRESS</option>
         <option value="DONE">DONE</option>
       </select>
     </div>
-    <button type="submit" class="btn btn-primary">Создать</button>
+    <div class="mb-3">
+      <label for="version" class="form-label">Версия:</label>
+      <input type="text" id="version" name="version" class="form-control" required>
+    </div>
+    <div class="mb-3">
+      <label for="startDate" class="form-label">Начало:</label>
+      <input type="datetime-local" id="startDate" name="startDate" class="form-control" required>
+    </div>
+    <div class="mb-3">
+      <label for="endDate" class="form-label">Конец:</label>
+      <input type="datetime-local" id="endDate" name="endDate" class="form-control" required>
+    </div>
+    <div class="mb-3">
+      <button type="submit" class="btn btn-primary">Create</button>
+    </div>
   </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
