--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -23,7 +23,7 @@
     </div>
     <div class="mb-3">
       <label for="performer" class="form-label">Исполнитель:</label>
-      <input type="text" id="performer" name="performer" class="form-control" required>
+      <input type="text" id="performer" name="performer" class="form-control">
     </div>
     <div class="mb-3">
       <label for="status" class="form-label">Статус:</label>
@@ -46,7 +46,7 @@
       <input type="datetime-local" id="endDate" name="endDate" class="form-control" required>
     </div>
     <div class="mb-3">
-      <button type="submit" class="btn btn-primary">Create</button>
+      <button type="submit" class="btn btn-primary">Создать</button>
     </div>
   </form>
 </div>
