--- a/src/main/resources/templates/task/edit.html
+++ b/src/main/resources/templates/task/edit.html
@@ -23,7 +23,7 @@
     </div>
     <div class="mb-3">
       <label for="performer" class="form-label">Исполнитель:</label>
-      <input type="text" th:field="*{task.performer}" id="performer" class="form-control" required>
+      <input type="text" th:field="*{task.performer}" id="performer" class="form-control">
     </div>
     <div class="mb-3">
       <label for="status" class="form-label">Статус:</label>
