--- a/src/main/resources/templates/task/index.html
+++ b/src/main/resources/templates/task/index.html
@@ -20,7 +20,8 @@
       <th>Автор</th>
       <th>Исполнитель</th>
       <th>Статус</th>
-      <th>Релизы</th>
+      <th>Версия</th>
+      <th>Даты выполнения</th>
       <th>Действия</th>
     </tr>
     </thead>
@@ -32,13 +33,20 @@
       <td th:text="${task.status}"></td>
       <td>
         <ul>
-          <li th:each="release : ${task.releases}"
-              th:text="${release.version} + ' ' + ${release.startDate} + ' - ' +
-              (${release.endDate} == null ? 'Неизвестно' : ${release.endDate})"></li>
+          <li th:each="release : ${task.releases}">
+            <span th:text="${release.version}"></span>
+          </li>
         </ul>
       </td>
       <td>
-        <a th:href="@{/{projId}/{taskId}/edit(projId=${task.project.id}, taskId=${task.id})}" class="btn btn-sm btn-warning mr-2">Редактировать</a>
+        <ul>
+          <li th:each="release : ${task.releases}"
+              th:text="${release.formattedStartDate} + ' - ' + ${release.formattedEndDate}"></li>
+        </ul>
+      </td>
+      <td>
+        <a th:href="@{/{projId}/{taskId}/edit(projId=${task.project.id}, taskId=${task.id})}"
+           class="btn btn-sm btn-info">Редактировать</a>
         <a th:href="@{/{projId}/{taskId}/delete(projId=${task.project.id}, taskId=${task.id})}"
            onclick="return confirm('Вы действительно хотите удалить эту задачу?')"
            class="btn btn-sm btn-danger">Удалить</a>
