изменена логика у проекта

--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -29,6 +29,8 @@
       <label for="status" class="form-label">Статус:</label>
       <select id="status" name="status" class="form-select">
         <option value="BACKLOG">BACKLOG</option>
+        <option value="IN_PROGRESS" disabled>IN_PROGRESS</option>
+        <option value="DONE" disabled>DONE</option>
       </select>
     </div>
     <div class="mb-3">
