--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -13,7 +13,7 @@
   <div class="row">
     <div class="col-md-12 text-center mt-5">
       <h1 class="display-4">Упс!</h1>
-      <p class="lead">Что-то пошло не так. Страница не найдена.</p>
+      <p class="lead">Что-то пошло не так</p>
       <a href="/" class="btn btn-primary">Вернуться на главную</a>
     </div>
   </div>
