--- a/src/main/resources/templates/project/edit.html
+++ b/src/main/resources/templates/project/edit.html
@@ -10,18 +10,18 @@
 </head>
 <body>
 <div class="container">
-  <h1>Изменить проект</h1>
+  <h1>Изменение проекта</h1>
   <form method="POST" th:object="${project}" th:action="@{/{id}/edit(id=${project.id})}">
     <input type="hidden" th:field="*{id}">
     <div class="mb-3">
       <label for="title" class="form-label">Название:</label>
       <input type="text" th:field="*{title}" id="title" class="form-control" required>
     </div>
-    <div class="mb-3">
-      <div class="form-check">
-        <input type="checkbox" th:field="*{isOpen}" class="form-check-input" id="isOpen">
-        <label class="form-check-label" for="isOpen">Открыт</label>
-      </div>
+    <div class="form-check" th:if="${!project.isOpen}">
+      <input class="form-check-input" type="checkbox" th:field="*{isOpen}" id="isOpen">
+      <label class="form-check-label" for="isOpen">
+        Открыть проект?
+      </label>
     </div>
     <button type="submit" class="btn btn-primary">Сохранить</button>
   </form>
@@ -29,5 +29,21 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+<script>
+  const isOpenCheckbox = document.getElementById("isOpen");
+  const isOpenLabel = document.querySelector("label[for='isOpen']");
+
+  if (!isOpenCheckbox.checked) {
+    isOpenLabel.textContent = "Открыть проект?";
+  }
+
+  isOpenCheckbox.addEventListener("change", function () {
+    if (isOpenCheckbox.checked) {
+      isOpenLabel.textContent = "Проект открыт";
+    } else {
+      isOpenLabel.textContent = "Открыть проект?";
+    }
+  });
+</script>
 </body>
 </html>
