--- a/src/main/resources/templates/project/index.html
+++ b/src/main/resources/templates/project/index.html
@@ -28,8 +28,8 @@
         <a th:href="@{/{id}(id=${project.id})}" class="btn btn-sm btn-primary mr-2">Просмотреть</a>
         <a th:href="@{/{id}/edit(id=${project.id})}" class="btn btn-sm btn-warning mr-2">Редактировать</a>
         <a th:href="@{/{id}/delete(id=${project.id})}"
-           onclick="return confirm('Вы действительно хотите удалить этот проект?')"
-           class="btn btn-sm btn-danger">Удалить</a>
+           onclick="return confirm('Вы действительно хотите закрыть этот проект?')"
+           class="btn btn-sm btn-danger">Закрыть</a>
       </td>
     </tr>
     </tbody>
