--- a/src/main/resources/templates/project/edit.html
+++ b/src/main/resources/templates/project/edit.html
@@ -23,6 +23,7 @@
         Открыть проект?
       </label>
     </div>
+    <a class="btn btn-secondary" href="/">Назад</a>
     <button type="submit" class="btn btn-primary">Сохранить</button>
   </form>
 </div>
