--- a/src/main/resources/templates/task/edit.html
+++ b/src/main/resources/templates/task/edit.html
@@ -33,6 +33,7 @@
         <option value="DONE">DONE</option>
       </select>
     </div>
+    <a class="btn btn-secondary" th:href="@{/{id}(id=${project.id})}">Назад</a>
     <button type="submit" class="btn btn-primary">Сохранить</button>
   </form>
 </div>
