--- a/src/main/resources/templates/project/index.html
+++ b/src/main/resources/templates/project/index.html
@@ -2,14 +2,18 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Проекты</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Елушев Максим">
+  <meta name="description" content="Данный сайт помогает управлять проектами и задачами">
+  <link rel="icon" href="../../static/kanban.svg">
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
         crossorigin="anonymous">
+  <title>Проекты</title>
 </head>
 <body>
-<div class="container">
+<div class="container mt-5">
   <h1>Проекты</h1>
   <a href="/create" class="btn btn-primary mb-3">Создать проект</a>
   <table class="table">
