--- a/src/main/resources/templates/release/index.html
+++ b/src/main/resources/templates/release/index.html
@@ -2,14 +2,18 @@
 <html lang="eu">
 <head>
   <meta charset="UTF-8">
-  <title>Релизы</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Елушев Максим">
+  <meta name="description" content="Данный сайт помогает управлять проектами и задачами">
+  <link rel="icon" href="../../static/kanban.svg">
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
         crossorigin="anonymous">
+  <title>Релизы</title>
 </head>
 <body>
-<div class="container my-5">
+<div class="container mt-5">
   <h1 class="mb-4">История релизов задачи: <span th:text="${task.name}"></span></h1>
   <a th:href="@{/{projId}/{taskId}/create(projId=${project.id}, taskId=${task.id})}"
      class="btn btn-primary mb-4">Добавить релиз</a>
