--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Создание задачи</title>
+  <meta name="author" content="Елушев Максим">
+  <meta name="description" content="Данный сайт помогает управлять проектами и задачами">
+  <link rel="icon" href="../../static/kanban.svg">
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
         crossorigin="anonymous">
+  <title>Создание задачи</title>
 </head>
 <body>
-<div class="container">
+<div class="container mt-5">
   <h1 class="mb-4">Создание задачи</h1>
-  <form method="POST">
+  <form method="POST" id="releaseForm">
     <div class="mb-3">
       <label for="name" class="form-label">Название:</label>
       <input type="text" id="name" name="name" class="form-control" required>
@@ -54,5 +57,19 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+<script>
+  document.getElementById("releaseForm").addEventListener("submit", function (event) {
+    event.preventDefault();
+
+    const startDate = new Date(document.getElementById("startDate").value);
+    const endDate = new Date(document.getElementById("endDate").value);
+
+    if (startDate.getTime() >= endDate.getTime()) {
+      alert("Начало релиза не может быть больше конца релиза!");
+    } else {
+      event.target.submit();
+    }
+  });
+</script>
 </body>
 </html>
