--- a/src/main/resources/templates/task/edit.html
+++ b/src/main/resources/templates/task/edit.html
@@ -2,15 +2,19 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Изменение задачи</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Елушев Максим">
+  <meta name="description" content="Данный сайт помогает управлять проектами и задачами">
+  <link rel="icon" href="../../static/kanban.svg">
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
         crossorigin="anonymous">
+  <title>Изменение задачи</title>
 </head>
 <body>
-<div class="container">
-  <h1>Изменить задачу</h1>
+<div class="container mt-5">
+  <h1>Изменение задачи</h1>
   <form method="POST">
     <input type="hidden" th:field="*{task.id}">
     <div class="mb-3">
