--- a/src/main/resources/templates/task/index.html
+++ b/src/main/resources/templates/task/index.html
@@ -2,14 +2,18 @@
 <html lang="eu">
 <head>
   <meta charset="UTF-8">
-  <title>Задачи</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Елушев Максим">
+  <meta name="description" content="Данный сайт помогает управлять проектами и задачами">
+  <link rel="icon" href="../../static/kanban.svg">
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
         crossorigin="anonymous">
+  <title>Задачи</title>
 </head>
 <body>
-<div class="container my-5">
+<div class="container mt-5">
   <h1 class="mb-4">Задачи проекта: <span th:text="${project.title}"></span></h1>
   <a class="btn btn-primary mb-4" th:href="@{/{id}/create(id=${project.id})}">Создать
     задачу</a>
@@ -78,6 +82,8 @@
       </div>
     </div>
   </div>
+  <br>
+  <a class="btn btn-secondary" href="/">Назад к проектам</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
