--- a/src/main/resources/templates/project/index.html
+++ b/src/main/resources/templates/project/index.html
@@ -27,7 +27,7 @@
     <tbody>
     <tr th:each="project : ${project}">
       <td th:text="${project.title}"></td>
-      <td th:text="${project.isOpen ? 'Открыт' : 'Закрыт'}"></td>
+      <td th:text="${project.getIsOpen ? 'Открыт' : 'Закрыт'}"></td>
       <td>
         <a th:href="@{/{id}(id=${project.id})}" class="btn btn-sm btn-primary mr-2">Просмотреть</a>
         <a th:href="@{/{id}/edit(id=${project.id})}" class="btn btn-sm btn-warning mr-2">Редактировать</a>
