--- a/src/main/resources/templates/project/edit.html
+++ b/src/main/resources/templates/project/edit.html
@@ -22,7 +22,7 @@
       <input type="text" th:field="*{title}" id="title" class="form-control" required>
     </div>
     <div class="form-check" th:if="${!project.getIsOpen}">
-      <input class="form-check-input" type="checkbox" th:field="*{getIsOpen}" id="isOpen">
+      <input class="form-check-input" type="checkbox" th:field="*{isOpen}" id="isOpen">
       <label class="form-check-label" for="isOpen">
         Открыть проект?
       </label>
