--- a/src/main/resources/templates/project/index.html
+++ b/src/main/resources/templates/project/index.html
@@ -25,7 +25,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="project : ${project}">
+    <tr th:each="project : ${projects}">
       <td th:text="${project.title}"></td>
       <td th:text="${project.getIsOpen ? 'Открыт' : 'Закрыт'}"></td>
       <td>
