--- a/src/main/resources/templates/project/index.html
+++ b/src/main/resources/templates/project/index.html
@@ -10,6 +10,8 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
         crossorigin="anonymous">
+  <link href="https://cdn.datatables.net/v/bs5/dt-1.13.4/af-2.5.3/datatables.min.css"
+        rel="stylesheet"/>
   <title>Проекты</title>
 </head>
 <body>
@@ -21,7 +23,7 @@
     <tr>
       <th>Название проекта</th>
       <th>Статус проекта</th>
-      <th>Действия</th>
+      <th data-orderable="false">Действия</th>
     </tr>
     </thead>
     <tbody>
@@ -29,11 +31,14 @@
       <td th:text="${project.title}"></td>
       <td th:text="${project.getIsOpen ? 'Открыт' : 'Закрыт'}"></td>
       <td>
-        <a th:href="@{/{id}(id=${project.id})}" class="btn btn-sm btn-primary mr-2">Просмотреть</a>
-        <a th:href="@{/{id}/edit(id=${project.id})}" class="btn btn-sm btn-warning mr-2">Редактировать</a>
-        <a th:href="@{/{id}/delete(id=${project.id})}"
-           onclick="return confirm('Вы действительно хотите закрыть этот проект?')"
-           class="btn btn-sm btn-danger">Закрыть</a>
+        <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+          <a th:href="@{/{id}(id=${project.id})}"
+             class="btn btn-sm btn-primary mr-2">Просмотреть</a>
+          <a th:href="@{/{id}/edit(id=${project.id})}" class="btn btn-sm btn-warning mr-2">Редактировать</a>
+          <a th:href="@{/{id}/delete(id=${project.id})}"
+             onclick="return confirm('Вы действительно хотите закрыть этот проект?')"
+             class="btn btn-sm btn-danger">Закрыть</a>
+        </div>
       </td>
     </tr>
     </tbody>
@@ -42,5 +47,20 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script type="text/javascript"
+        src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript"
+        src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
+
+<script>
+  $(document).ready(function () {
+    $('.table').DataTable({
+      language: {
+        "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Russian.json"
+      }
+    });
+  });
+</script>
 </body>
 </html>
