--- a/src/main/resources/templates/release/index.html
+++ b/src/main/resources/templates/release/index.html
@@ -10,6 +10,8 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
         crossorigin="anonymous">
+  <link href="https://cdn.datatables.net/v/bs5/dt-1.13.4/af-2.5.3/datatables.min.css"
+        rel="stylesheet"/>
   <title>Релизы</title>
 </head>
 <body>
@@ -32,11 +34,13 @@
       <td th:text="${release.formattedStartDate}"></td>
       <td th:text="${release.formattedEndDate}"></td>
       <td>
-        <a th:href="@{/{projId}/{taskId}/{rlsId}/edit(projId=${project.id}, taskId=${task.id}, rlsId=${release.id})}"
-           class="btn btn-sm btn-warning mr-2">Редактировать</a>
-        <a th:href="@{/{projId}/{taskId}/{rlsId}/delete(projId=${project.id}, taskId=${task.id}, rlsId=${release.id})}"
-           onclick="return confirm('Вы действительно хотите удалить этот релиз?')"
-           class="btn btn-sm btn-danger mr-2">Удалить</a>
+        <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+          <a th:href="@{/{projId}/{taskId}/{rlsId}/edit(projId=${project.id}, taskId=${task.id}, rlsId=${release.id})}"
+             class="btn btn-sm btn-warning mr-2">Редактировать</a>
+          <a th:href="@{/{projId}/{taskId}/{rlsId}/delete(projId=${project.id}, taskId=${task.id}, rlsId=${release.id})}"
+             onclick="return confirm('Вы действительно хотите удалить этот релиз?')"
+             class="btn btn-sm btn-danger mr-2">Удалить</a>
+        </div>
       </td>
     </tr>
     </tbody>
@@ -46,5 +50,20 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script type="text/javascript"
+        src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript"
+        src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
+
+<script>
+  $(document).ready(function () {
+    $('.table').DataTable({
+      language: {
+        "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Russian.json"
+      }
+    });
+  });
+</script>
 </body>
 </html>
