--- a/src/main/resources/templates/project/index.html
+++ b/src/main/resources/templates/project/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div class="container mt-5">
-  <h1>Проекты</h1>
+  <h1 class="mb-3">Проекты</h1>
   <a href="/create" class="btn btn-primary mb-3">Создать проект</a>
   <table class="table">
     <thead>
