--- a/src/main/resources/templates/task/edit.html
+++ b/src/main/resources/templates/task/edit.html
@@ -13,23 +13,36 @@
   <title>Изменение задачи</title>
 </head>
 <body>
-<div class="container mt-5">
+<div class="container mt-5 mx-auto text-center">
   <h1>Изменение задачи</h1>
   <form method="POST">
     <input type="hidden" th:field="*{task.id}">
-    <div class="mb-3">
+    <div class="col-md-6 mb-3 mx-auto text-center">
       <label for="name" class="form-label">Название:</label>
-      <input type="text" th:field="*{task.name}" id="name" class="form-control" required>
+      <input type="text" th:field="*{task.name}" id="name"
+             placeholder="Введите название"
+             aria-label="Поле ввода названия задачи"
+             class="form-control"
+             required>
     </div>
-    <div class="mb-3">
-      <label for="author" class="form-label">Автор:</label>
-      <input type="text" th:field="*{task.author}" id="author" class="form-control" required>
+    <div class="row justify-content-center">
+      <div class="col-md-3 mb-3">
+        <label for="author" class="form-label">Автор:</label>
+        <input type="text" th:field="*{task.author}" id="author"
+               placeholder="Введите автора"
+               aria-label="Поле ввода автора задачи"
+               class="form-control"
+               required>
+      </div>
+      <div class="col-md-3 mb-3">
+        <label for="performer" class="form-label">Исполнитель:</label>
+        <input type="text" th:field="*{task.performer}" id="performer"
+               placeholder="Введите исполнителя"
+               aria-label="Поле ввода исполнителя задачи"
+               class="form-control">
+      </div>
     </div>
-    <div class="mb-3">
-      <label for="performer" class="form-label">Исполнитель:</label>
-      <input type="text" th:field="*{task.performer}" id="performer" class="form-control">
-    </div>
-    <div class="mb-3">
+    <div class="col-md-6 mb-3 mx-auto text-center">
       <label for="status" class="form-label">Статус:</label>
       <select id="status" name="status" th:field="*{task.status}" class="form-select">
         <option value="BACKLOG">BACKLOG</option>
